# mariza-app

./: Dockerfile  compose.yml  pyproject.toml
datas/: public_bath.json  saunas.geojson
marizaapp/: data.py
marizaapp/app/: 01-map.py
